# airflow-chart

./: .gitignore  .helmignore  .pre-commit-config.yaml  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Chart.yaml  LICENSE  Makefile  README.md  README.md.gotmpl  UPDATING.md  aftest-git-sync-relay-values.yaml  aftest-git-sync-ssh-secret.yaml  dag-server-test-values.yaml  index.yaml  kind-config.yaml  metadata.yaml  pyproject.toml  requirements.yaml  values.schema.json  values.yaml
.circleci/: config.yml  config.yml.j2  generate_circleci_config.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
configs/: airflow-ingress.yaml
dev/: custom_upstream_airflow_chart_release.md
docs/: README.md  git-clone.d2  git-sync-relay.md
files/: README.md  pod-template-file.yaml
requirements/: chart.in  chart.txt  functional.in  functional.txt
templates/: NOTES.txt  _apivers.tpl  _helpers.yaml  airflow-scc-anyuid.yaml  cleanup-task-metadata.yaml  configmap.yaml  create-user-job.yaml  default-deny.yaml  generate-ssl.yaml  ingress.yaml  logging-sidecar-configmap.yaml  pod-template-file.yaml  run-airflow-migrations.yaml
tests/: README.md  __init__.py  airflow_environment_variables_test.yaml  cleanup_cleanup-cronjob_test.yaml  cleanup_cleanup-serviceaccount_test.yaml  configmap_test.yaml  create-user-job_test.yaml  enable_all_features.yaml  extra-objects_test.yaml  flower_flower-deployment_test.yaml  flower_flower-networkpolicy_test.yaml  flower_flower-service_test.yaml  ingress_test.yaml  limitrange_test.yaml  scc_test.yaml  (+44 more)
(+224 files in other folders)
