# https://www.python.org/dev/peps/pep-0518/#file-format
[project]
name = "airflow-chart-dev-env"
description = "astronomer airflow-chart development environment"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "docker>=7.1.0",
    "exceptiongroup>=1.3.0",
    "filelock>=3.20.0",
    "jmespath>=1.0.1",
    "jsonschema>=4.25.1",
    "kubernetes>=34.1.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-forked>=1.6.0",
    "pytest-pretty>=1.3.0",
    "pytest-profiling>=1.8.1",
    "pytest-rerunfailures>=16.1",
    "pytest-testinfra>=9.0.0",
    "pytest-xdist>=3.8.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "semver>=3.0.4",
    "yamllint>=1.37.1",
]

# https://docs.astral.sh/ruff/settings/
[tool.ruff]
line-length = 132
target-version = "py314"

[tool.ruff.lint]
fixable = ["ALL"]

# https://docs.astral.sh/ruff/rules/
select = [
  "ASYNC",
  "ARG",
  "BLE",
  "C",
  "E",
  "F",
  "FLY",
  "FURB",
  "I",
  "PERF",
  "PGH",
  "Q",
  "R",
  "RUF",
  "S",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  "E501",
  "RUF012",
  "S311",
  "S314",
  "S602",
  "S603",
  "S607",
  "S608",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
  "S101",
  "S104",
  "S105",
  "S602",
  ]
"tests/functional_tests/test_network_security.py" = ["C901"]
"tests/chart/test_private_registry.py" = ["UP031"]
"tests/chart/test_pods.py" = ["UP031"]

[tool.ruff.lint.mccabe]
# TODO: reduce this
max-complexity = 11
